--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /********** Template CSS **********/
 :root {
-    --primary: #51cc0a;
-    --light: #03a303;
+    --primary: #033803;
+    --light: #033803;
     --dark: #000000;
 }
 
