--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #fcfcfc;
+    --primary: #073002;
     --light: #033803;
     --dark: #000000;
     
