--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,10 @@
 /********** Template CSS **********/
 :root {
-    --primary: #073002;
+    --primary: #ffffff;
     --light: #033803;
     --dark: #000000;
+    --prim: #033803;
+
     
 }
 
@@ -101,7 +103,7 @@
 
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link.active {
-    color: var(--primary);
+    color: var(--prim);
 }
 
 @media (max-width: 991.98px) {
