fixes made a lot abeg

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@
 .btn.btn-primary,
 .btn.btn-secondary {
     color: #ffffff;
-    background-color: #03a303;
+    background-color: #084d08;
 
 }
 
@@ -78,7 +78,7 @@
     justify-content: center;
     font-weight: normal;
     border-radius: 0px;
-    background-color: #03a303;
+    background-color: #014b01;
 }
 
 
